WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226448
Fix thread safety issues in AudioBufferSourceNode
https://bugs.webkit.org/show_bug.cgi?id=226448
Summary
Fix thread safety issues in AudioBufferSourceNode
Chris Dumez
Reported
2021-05-30 19:59:31 PDT
Fix thread safety issue in AudioBufferSourceNode::propagatesSilence() found by clang thread safety analysis.
Attachments
Patch
(18.94 KB, patch)
2021-05-30 20:23 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-05-30 20:23:46 PDT
Created
attachment 430169
[details]
Patch
Chris Dumez
Comment 2
2021-05-31 17:07:23 PDT
Comment on
attachment 430169
[details]
Patch Clearing flags on attachment: 430169 Committed
r278287
(
238324@main
): <
https://commits.webkit.org/238324@main
>
Chris Dumez
Comment 3
2021-05-31 17:07:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2021-05-31 17:08:18 PDT
<
rdar://problem/78695338
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug