Fix thread safety issues in AudioBufferSourceNode https://bugs.webkit.org/show_bug.cgi?id=226448

Reviewed by Darin Adler.

Adopt thread safety analysis annotations in AudioBufferSourceNode and fix the bugs
that were found by clang:
- We were failing to grab the processLock when setting the loop / loopStart / loopEnd attributes
  on the main thread (Those are set by JS at any time).
- propagatesSilence() was failing to grab the lock when checking m_buffer on the audio thread.

* Modules/webaudio/AudioBufferSourceNode.cpp:
(WebCore::AudioBufferSourceNode::process):
(WebCore::AudioBufferSourceNode::renderSilenceAndFinishIfNotLooping):
(WebCore::AudioBufferSourceNode::renderFromBuffer):
(WebCore::AudioBufferSourceNode::setBuffer):
(WebCore::AudioBufferSourceNode::setLoop):
(WebCore::AudioBufferSourceNode::setLoopStart):
(WebCore::AudioBufferSourceNode::setLoopEnd):
(WebCore::AudioBufferSourceNode::adjustGrainParameters):
(WebCore::AudioBufferSourceNode::totalPitchRate):
(WebCore::AudioBufferSourceNode::propagatesSilence const):
* Modules/webaudio/AudioBufferSourceNode.h:

Canonical link: https://commits.webkit.org/238324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278287 268f45cc-cd09-0410-ab3c-d52691b4dbfc