Source/WebCore/Modules/webaudio/AudioBufferSourceNode.cpp
@@ -66,11 +66,11 @@ ExceptionOr<Ref<AudioBufferSourceNode>> AudioBufferSourceNode::create(BaseAudioC
 {
     auto node = adoptRef(*new AudioBufferSourceNode(context));
 
-    node->setBuffer(WTFMove(options.buffer));
+    node->setBufferForBindings(WTFMove(options.buffer));
     node->detune().setValue(options.detune);
-    node->setLoop(options.loop);
-    node->setLoopEnd(options.loopEnd);
-    node->setLoopStart(options.loopStart);
+    node->setLoopForBindings(options.loop);
+    node->setLoopEndForBindings(options.loopEnd);
+    node->setLoopStartForBindings(options.loopStart);
     node->playbackRate().setValue(options.playbackRate);
 
     return node;
@@ -110,7 +110,7 @@ void AudioBufferSourceNode::process(size_t framesToProcess)
     }
     Locker locker { AdoptLock, m_processLock };
 
-    if (!buffer()) {
+    if (!m_buffer) {
         outputBus.zero();
         return;
     }
@@ -118,7 +118,7 @@ void AudioBufferSourceNode::process(size_t framesToProcess)
     // After calling setBuffer() with a buffer having a different number of channels, there can in rare cases be a slight delay
     // before the output bus is updated to the new number of channels because of use of tryLocks() in the context's updating system.
     // In this case, if the buffer has just been changed and we're not quite ready yet, then just output silence.
-    if (numberOfChannels() != buffer()->numberOfChannels()) {
+    if (numberOfChannels() != m_buffer->numberOfChannels()) {
         outputBus.zero();
         return;
     }
@@ -148,7 +148,7 @@ void AudioBufferSourceNode::process(size_t framesToProcess)
 // Returns true if we're finished.
 bool AudioBufferSourceNode::renderSilenceAndFinishIfNotLooping(AudioBus*, unsigned index, size_t framesToProcess)
 {
-    if (!loop()) {
+    if (!m_isLooping) {
         // If we're not looping, then stop playing when we get to the end.
 
         if (framesToProcess > 0) {
@@ -171,8 +171,8 @@ bool AudioBufferSourceNode::renderFromBuffer(AudioBus* bus, unsigned destination
 
     // Basic sanity checking
     ASSERT(bus);
-    ASSERT(buffer());
-    if (!bus || !buffer())
+    ASSERT(m_buffer);
+    if (!bus || !m_buffer)
         return false;
 
     unsigned numberOfChannels = this->numberOfChannels();
@@ -205,8 +205,8 @@ bool AudioBufferSourceNode::renderFromBuffer(AudioBus* bus, unsigned destination
     // Offset the pointers to the correct offset frame.
     unsigned writeIndex = destinationFrameOffset;
 
-    size_t bufferLength = buffer()->length();
-    double bufferSampleRate = buffer()->sampleRate();
+    size_t bufferLength = m_buffer->length();
+    double bufferSampleRate = m_buffer->sampleRate();
     double pitchRate = totalPitchRate();
     bool reverse = pitchRate < 0;
 
@@ -228,10 +228,10 @@ bool AudioBufferSourceNode::renderFromBuffer(AudioBus* bus, unsigned destination
     double virtualMinFrame = 0;
     double virtualDeltaFrames = maxFrame;
 
-    if (loop() && (m_loopStart || m_loopEnd) && m_loopStart >= 0 && m_loopEnd > 0 && m_loopStart < m_loopEnd) {
+    if (m_isLooping && (m_loopStart || m_loopEnd) && m_loopStart >= 0 && m_loopEnd > 0 && m_loopStart < m_loopEnd) {
         // Convert from seconds to sample-frames.
-        double loopMinFrame = m_loopStart * buffer()->sampleRate();
-        double loopMaxFrame = m_loopEnd * buffer()->sampleRate();
+        double loopMinFrame = m_loopStart * m_buffer->sampleRate();
+        double loopMaxFrame = m_loopEnd * m_buffer->sampleRate();
 
         virtualMaxFrame = std::min(loopMaxFrame, virtualMaxFrame);
         virtualMinFrame = std::max(loopMinFrame, virtualMinFrame);
@@ -240,8 +240,8 @@ bool AudioBufferSourceNode::renderFromBuffer(AudioBus* bus, unsigned destination
 
     // If we're looping and the offset (virtualReadIndex) is past the end of the loop, wrap back to the
     // beginning of the loop. For other cases, nothing needs to be done.
-    if (loop() && m_virtualReadIndex >= virtualMaxFrame) {
-        m_virtualReadIndex = (m_loopStart < 0) ? 0 : (m_loopStart * buffer()->sampleRate());
+    if (m_isLooping && m_virtualReadIndex >= virtualMaxFrame) {
+        m_virtualReadIndex = (m_loopStart < 0) ? 0 : (m_loopStart * m_buffer->sampleRate());
         m_virtualReadIndex = std::min(m_virtualReadIndex, static_cast<double>(bufferLength - 1));
     }
 
@@ -339,7 +339,7 @@ bool AudioBufferSourceNode::renderFromBuffer(AudioBus* bus, unsigned destination
 
             unsigned readIndex2 = readIndex + 1;
             if (readIndex2 >= maxFrame)
-                readIndex2 = loop() ? minFrame : readIndex;
+                readIndex2 = m_isLooping ? minFrame : readIndex;
 
             // Linear interpolation.
             for (unsigned i = 0; i < numberOfChannels; ++i) {
@@ -368,7 +368,7 @@ bool AudioBufferSourceNode::renderFromBuffer(AudioBus* bus, unsigned destination
             // For linear interpolation we need the next sample-frame too.
             unsigned readIndex2 = readIndex + 1;
             if (readIndex2 >= bufferLength) {
-                if (loop()) {
+                if (m_isLooping) {
                     // Make sure to wrap around at the end of the buffer.
                     readIndex2 = static_cast<unsigned>(virtualReadIndex + 1 - virtualDeltaFrames);
                 } else
@@ -407,19 +407,19 @@ bool AudioBufferSourceNode::renderFromBuffer(AudioBus* bus, unsigned destination
     return true;
 }
 
-ExceptionOr<void> AudioBufferSourceNode::setBuffer(RefPtr<AudioBuffer>&& buffer)
+ExceptionOr<void> AudioBufferSourceNode::setBufferForBindings(RefPtr<AudioBuffer>&& buffer)
 {
     ASSERT(isMainThread());
     DEBUG_LOG(LOGIDENTIFIER);
-
-    if (buffer && m_wasBufferSet)
-        return Exception { InvalidStateError, "The buffer was already set"_s };
 
     // The context must be locked since changing the buffer can re-configure the number of channels that are output.
     Locker contextLocker { context().graphLock() };
     
     // This synchronizes with process().
     Locker locker { m_processLock };
+
+    if (buffer && m_wasBufferSet)
+        return Exception { InvalidStateError, "The buffer was already set"_s };
     
     if (buffer) {
         m_wasBufferSet = true;
@@ -455,6 +455,27 @@ unsigned AudioBufferSourceNode::numberOfChannels()
 ExceptionOr<void> AudioBufferSourceNode::startLater(double when, double grainOffset, std::optional<double> grainDuration)
 {
     return startPlaying(when, grainOffset, grainDuration);
+}
+
+void AudioBufferSourceNode::setLoopForBindings(bool looping)
+{
+    ASSERT(isMainThread());
+    Locker locker { m_processLock };
+    m_isLooping = looping;
+}
+
+void AudioBufferSourceNode::setLoopStartForBindings(double loopStart)
+{
+    ASSERT(isMainThread());
+    Locker locker { m_processLock };
+    m_loopStart = loopStart;
+}
+
+void AudioBufferSourceNode::setLoopEndForBindings(double loopEnd)
+{
+    ASSERT(isMainThread());
+    Locker locker { m_processLock };
+    m_loopEnd = loopEnd;
 }
 
 ExceptionOr<void> AudioBufferSourceNode::startPlaying(double when, double grainOffset, std::optional<double> grainDuration)
@@ -496,19 +517,18 @@ void AudioBufferSourceNode::adjustGrainParameters()
 {
     ASSERT(m_processLock.isHeld());
 
-    auto buffer = this->buffer();
-    if (!buffer)
+    if (!m_buffer)
         return;
 
     // Do sanity checking of grain parameters versus buffer size.
-    double bufferDuration = buffer->duration();
+    double bufferDuration = m_buffer->duration();
 
     m_grainOffset = std::min(bufferDuration, m_grainOffset);
 
     if (!m_wasGrainDurationGiven)
         m_grainDuration = bufferDuration - m_grainOffset;
 
-    if (m_wasGrainDurationGiven && loop()) {
+    if (m_wasGrainDurationGiven && m_isLooping) {
         // We're looping a grain with a grain duration specified. Schedule the loop
         // to stop after grainDuration seconds after starting, possibly running the
         // loop multiple times if grainDuration is larger than the buffer duration.
@@ -523,9 +543,9 @@ void AudioBufferSourceNode::adjustGrainParameters()
     // When aligned to the sample-frame the playback will be identical to the PCM data stored in the buffer.
     // Since playbackRate == 1 is very common, it's worth considering quality.
     if (playbackRate().value() < 0)
-        m_virtualReadIndex = AudioUtilities::timeToSampleFrame(m_grainOffset + m_grainDuration, buffer->sampleRate()) - 1;
+        m_virtualReadIndex = AudioUtilities::timeToSampleFrame(m_grainOffset + m_grainDuration, m_buffer->sampleRate()) - 1;
     else
-        m_virtualReadIndex = AudioUtilities::timeToSampleFrame(m_grainOffset, buffer->sampleRate());
+        m_virtualReadIndex = AudioUtilities::timeToSampleFrame(m_grainOffset, m_buffer->sampleRate());
 }
 
 double AudioBufferSourceNode::totalPitchRate()
@@ -533,8 +553,8 @@ double AudioBufferSourceNode::totalPitchRate()
     // Incorporate buffer's sample-rate versus AudioContext's sample-rate.
     // Normally it's not an issue because buffers are loaded at the AudioContext's sample-rate, but we can handle it in any case.
     double sampleRateFactor = 1.0;
-    if (buffer())
-        sampleRateFactor = buffer()->sampleRate() / static_cast<double>(sampleRate());
+    if (m_buffer)
+        sampleRateFactor = m_buffer->sampleRate() / static_cast<double>(sampleRate());
     
     double basePitchRate = playbackRate().finalValue();
     double detune = pow(2, m_detune->finalValue() / 1200);
@@ -553,7 +573,16 @@ double AudioBufferSourceNode::totalPitchRate()
 
 bool AudioBufferSourceNode::propagatesSilence() const
 {
-    return !isPlayingOrScheduled() || hasFinished() || !m_buffer;
+    ASSERT(context().isAudioThread());
+    if (!isPlayingOrScheduled() || hasFinished())
+        return true;
+
+    if (!m_processLock.tryLock()) {
+        // We weren't able to get the lock so we assume we have a buffer.
+        return false;
+    }
+    Locker locker { AdoptLock, m_processLock };
+    return !m_buffer;
 }
 
 } // namespace WebCore
